2007-09-30 Marc Noirot <marc.noirot@gmail.com>
	* configure.ac: 1.0.2 Release.
	
	* configure.ac, config.h.win, types.h, types.c:
	  Fixed integer and float size checking, as well as endianness
	  checking. This fixes issues on 64-bits architectures.
	
	* flvdump.c (main): Fixed printf type specifiers.
	
	* flvmeta.c (get_flv_info): Fixed "times" metadata tag,
	  which was incorrectly written as "timestamps".
	
	* flvmeta.c (compute_metadata): Fixed audio delay
	  computation.
	
2007-09-24 Marc Noirot <marc.noirot@gmail.com>
	* configure.ac: 1.0.1 Release.
	
	* flvmeta.c (compute_metadata, get_flv_info):
	  Fixed an offset and file size computation error.
	
	* flvmeta.c (compute_metadata): Audio-related metadata
	  should not appear when the file has no audio data.
	
	* Makefile.win: Removed references to flv.c.

2007-09-22 Marc Noirot <marc.noirot@gmail.com>
	* types.c, types.h: Removed 64 bits integers conversions.
	
	* types.c (uint32_to_uint24_be): Fixed a few literal unsigned
	  integers.

2007-09-21 Marc Noirot <marc.noirot@gmail.com>
	* configure.ac: 1.0 Release.
	
	* amf.c (amf_data_free): Fixed a memory leak on array objects.
	
	* config.h.win, configure.ac, flvdump.c, flvmeta.c:
	  Added bug report mail address.
	
	* configure.ac: Added a number of language and headers tests.
	  Marked autoconf minimum version as 2.61.
	  
	* flvmeta.c (compute_metadata): Fixed video width and height
	  injection.
	
	* Makefile.am: Removed the empty flv.c from the sources.

2007-09-20 Marc Noirot <marc.noirot@gmail.com>	
	* flv.h, flvmeta.c, flvdump.c: Added support for Screen Video
	  V2, and On2 VP6 with alpha channel.

	* flvdump.c (compute_metadata): Fixed a compilation issue
	  on MacOSX caused by a misplaced minus sign.

	* flvmeta.c (main): Added protection against giving the same
	  file as input and output.

	* flv.h, flvmeta.c: Fixed the padding in the flv_tag to better
	  reflect its role.
	
	* flvmeta.c: Made error messages more uniform.
	